Perma Early Beta win bustage build/src/toolkit/components/telemetry/core/Telemetry.cpp when Gecko 73 merges to beta on 2020-01-06
Categories
(Toolkit :: Telemetry, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox71 | --- | unaffected |
| firefox72 | --- | unaffected |
| firefox73 | blocking | verified |
People
(Reporter: apavel, Assigned: toshi)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[Tracking Requested - why for this release]:
Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=281529341&repo=try&lineNumber=34524
[task 2019-12-17T12:17:04.893Z] 12:17:04 INFO - mkdir -p '.deps/'
[task 2019-12-17T12:17:04.893Z] 12:17:04 INFO - mozmake.EXE[4]: Leaving directory 'z:/build/build/src/obj-firefox/toolkit/components/url-classifier'
[task 2019-12-17T12:17:04.932Z] 12:17:04 INFO - mozmake.EXE[4]: Entering directory 'z:/build/build/src/obj-firefox/toolkit/components/url-classifier'
[task 2019-12-17T12:17:04.932Z] 12:17:04 INFO - toolkit/components/url-classifier/HashStore.obj
[task 2019-12-17T12:17:04.932Z] 12:17:04 INFO - mozmake.EXE[4]: Leaving directory 'z:/build/build/src/obj-firefox/toolkit/components/url-classifier'
[task 2019-12-17T12:17:06.351Z] 12:17:06 INFO - mozmake.EXE[4]: Entering directory 'z:/build/build/src/obj-firefox/toolkit/components/thumbnails'
[task 2019-12-17T12:17:06.353Z] 12:17:06 INFO - z:/build/fetches/sccache/sccache.exe z:/build/fetches/clang/bin/clang-cl.exe -Xclang -std=c++17 --target=aarch64-windows-msvc -FoUnified_cpp_thumbnails0.obj -c -flto=thin -fuse-ld=lld -Iz:/build/build/src/obj-firefox/dist/stl_wrappers -guard:cf -DNDEBUG=1 -DTRIMMED=1 -DSTATIC_EXPORTABLE_JS_API -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -Iz:/build/build/src/toolkit/components/thumbnails -Iz:/build/build/src/obj-firefox/toolkit/components/thumbnails -Iz:/build/build/src/netwerk/base -Iz:/build/build/src/obj-firefox/dist/include -Iz:/build/build/src/obj-firefox/dist/include/nspr -Iz:/build/build/src/obj-firefox/dist/include/nss -MD -FI z:/build/build/src/obj-firefox/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -Qunused-arguments -fcrash-diagnostics-dir=z:/build/public/build -TP -nologo -Zc:sizedDealloc- -D_HAS_EXCEPTIONS=0 -W3 -Gy -Zc:inline -Gw -Wno-inline-new-delete -Wno-invalid-offsetof -Wno-microsoft-enum-value -Wno-microsoft-include -Wno-unknown-pragmas -Wno-ignored-pragmas -Wno-deprecated-declarations -Wno-invalid-noreturn -Wno-inconsistent-missing-override -Wno-implicit-exception-spec-mismatch -Wno-microsoft-exception-spec -Wno-unused-local-typedef -Wno-ignored-attributes -Wno-used-but-marked-unused -D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING -GR- -Z7 -O2 -Oy- -Werror -Xclang -MP -Xclang -dependency-file -Xclang .deps/Unified_cpp_thumbnails0.obj.pp -Xclang -MT -Xclang Unified_cpp_thumbnails0.obj Unified_cpp_thumbnails0.cpp
[task 2019-12-17T12:17:06.353Z] 12:17:06 INFO - mozmake.EXE[4]: Leaving directory 'z:/build/build/src/obj-firefox/toolkit/components/thumbnails'
[task 2019-12-17T12:17:06.363Z] 12:17:06 INFO - mozmake.EXE[4]: Entering directory 'z:/build/build/src/obj-firefox/toolkit/components/telemetry'
[task 2019-12-17T12:17:06.363Z] 12:17:06 INFO - z:/build/fetches/sccache/sccache.exe z:/build/fetches/clang/bin/clang-cl.exe -Xclang -std=c++17 --target=aarch64-windows-msvc -FoTelemetry.obj -c -flto=thin -fuse-ld=lld -Iz:/build/build/src/obj-firefox/dist/stl_wrappers -guard:cf -DNDEBUG=1 -DTRIMMED=1 -DWIN32_LEAN_AND_MEAN -D_WIN32 -DWIN32 -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -DOS_WIN=1 -D_UNICODE -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DUNICODE -D_WINDOWS -D_SECURE_ATL -DCOMPILER_MSVC '-DMOZ_APP_VERSION="73.0"' -DSTATIC_EXPORTABLE_JS_API -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -Iz:/build/build/src/toolkit/components/telemetry -Iz:/build/build/src/obj-firefox/toolkit/components/telemetry -Iz:/build/build/src/obj-firefox/ipc/ipdl/_ipdlheaders -Iz:/build/build/src/ipc/chromium/src -Iz:/build/build/src/ipc/glue -Iz:/build/build/src/xpcom/build -Iz:/build/build/src/xpcom/threads -Iz:/build/build/src/obj-firefox/dist/include -Iz:/build/build/src/obj-firefox/dist/include/nspr -Iz:/build/build/src/obj-firefox/dist/include/nss -MD -FI z:/build/build/src/obj-firefox/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -Qunused-arguments -fcrash-diagnostics-dir=z:/build/public/build -TP -nologo -Zc:sizedDealloc- -D_HAS_EXCEPTIONS=0 -W3 -Gy -Zc:inline -Gw -Wno-inline-new-delete -Wno-invalid-offsetof -Wno-microsoft-enum-value -Wno-microsoft-include -Wno-unknown-pragmas -Wno-ignored-pragmas -Wno-deprecated-declarations -Wno-invalid-noreturn -Wno-inconsistent-missing-override -Wno-implicit-exception-spec-mismatch -Wno-microsoft-exception-spec -Wno-unused-local-typedef -Wno-ignored-attributes -Wno-used-but-marked-unused -D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING -GR- -Z7 -O2 -Oy- -Werror -Xclang -MP -Xclang -dependency-file -Xclang .deps/Telemetry.obj.pp -Xclang -MT -Xclang Telemetry.obj z:/build/build/src/toolkit/components/telemetry/core/Telemetry.cpp
[task 2019-12-17T12:17:06.363Z] 12:17:06 INFO - z:/build/build/src/toolkit/components/telemetry/core/Telemetry.cpp(689,10): error: no member named 'GetUntrustedModuleLoadEvents' in namespace 'mozilla::Telemetry'; did you mean simply 'GetUntrustedModuleLoadEvents'?
[task 2019-12-17T12:17:06.364Z] 12:17:06 INFO - return Telemetry::GetUntrustedModuleLoadEvents(cx, aPromise);
[task 2019-12-17T12:17:06.364Z] 12:17:06 INFO - ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2019-12-17T12:17:06.364Z] 12:17:06 INFO - GetUntrustedModuleLoadEvents
[task 2019-12-17T12:17:06.364Z] 12:17:06 INFO - z:/build/build/src/toolkit/components/telemetry/core/Telemetry.cpp(687,16): note: 'GetUntrustedModuleLoadEvents' declared here
[task 2019-12-17T12:17:06.364Z] 12:17:06 INFO - TelemetryImpl::GetUntrustedModuleLoadEvents(JSContext* cx, Promise** aPromise) {
[task 2019-12-17T12:17:06.364Z] 12:17:06 INFO - ^
[task 2019-12-17T12:17:06.365Z] 12:17:06 INFO - 1 error generated.
[task 2019-12-17T12:17:06.365Z] 12:17:06 INFO - z:/build/build/src/config/rules.mk:736: recipe for target 'Telemetry.obj' failed
[task 2019-12-17T12:17:06.365Z] 12:17:06 INFO - mozmake.EXE[4]: *** [Telemetry.obj] Error 1
[task 2019-12-17T12:17:06.365Z] 12:17:06 INFO - mozmake.EXE[4]: Leaving directory 'z:/build/build/src/obj-firefox/toolkit/components/telemetry'
[task 2019-12-17T12:17:06.365Z] 12:17:06 INFO - mozmake.EXE[4]: *** Waiting for unfinished jobs....
[task 2019-12-17T12:17:06.384Z] 12:17:06 INFO - mozmake.EXE[4]: Entering directory 'z:/build/build/src/obj-firefox/toolkit/components/telemetry'
[task 2019-12-17T12:17:06.384Z] 12:17:06 INFO - toolkit/components/telemetry/ProcessedStack.obj
[task 2019-12-17T12:17:06.384Z] 12:17:06 INFO - mozmake.EXE[4]: Leaving directory 'z:/build/build/src/obj-firefox/toolkit/components/telemetry'
[task 2019-12-17T12:17:06.384Z] 12:17:06 INFO - mozmake.EXE[4]: Entering directory 'z:/build/build/src/obj-firefox/toolkit/components/url-classifier'
| Reporter | ||
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
Sorry. I've got the root cause. We need to replace this NIGHTLY_BUILD with EARLY_BETA_OR_EARLIER, too.
| Assignee | ||
Comment 2•6 years ago
|
||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 4•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 5•6 years ago
|
||
Verified as fixed with this beta sim:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=4d5e8ec9c731fb8d8493c8edf087f4b74405dcf5&searchStr=windows%2C2012%2Caarch64%2Copt%2Cbuild-win64-aarch64%2Fopt%2C%28b%29&selectedJob=281717065
Comment 6•6 years ago
|
||
Please specify a root cause for this bug. See :tmaity for more information.
Updated•6 years ago
|
Updated•6 years ago
|
Description
•