Bug 1604462 - Include other/UntrustedModules.h in beta build.  r=aklotz

Differential Revision: https://phabricator.services.mozilla.com/D57483

--HG--
extra : moz-landing-system : lando